<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.north</groupId>
    <artifactId>north</artifactId>
    <version>2.0-SNAPSHOT</version>

    <packaging>pom</packaging>
    <name>north</name>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.5.5</version>
    </parent>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <north.admin>2.0-SNAPSHOT</north.admin>
        <north.common>2.0-SNAPSHOT</north.common>
        <north.file.storage>2.0-SNAPSHOT</north.file.storage>
        <north.sso.server>2.0-SNAPSHOT</north.sso.server>

        <openapi.version>1.5.9</openapi.version>
        <mybatis.plus.version>3.5.0</mybatis.plus.version>
        <fastjson.version>1.2.78</fastjson.version>
        <postgresql.version>42.2.23</postgresql.version>
        <redisson.version>3.16.3</redisson.version>
        <sa-token.version>1.28.0</sa-token.version>
        <hutool.version>5.7.14</hutool.version>
        <easypoi.version>4.4.0</easypoi.version>
        <tianai-captcha.version>1.2.7</tianai-captcha.version>

    </properties>

    <modules>
        <module>north-admin</module>
        <module>north-common</module>
        <module>north-file-storage</module>
        <module>north-generator</module>
        <module>north-sso-server</module>
    </modules>


    <dependencies>

    </dependencies>


</project>
